--- a/Agents/alpha_beta_boost/CMakeLists.txt
+++ b/Agents/alpha_beta_boost/CMakeLists.txt
@@ -2,5 +2,8 @@ cmake_minimum_required(VERSION 3.27)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
+
+set(CMAKE_CXX_STANDARD 20)
+
 project(alpha_beta)
 add_subdirectory(src bin)
